added does repeat button

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,6 +31,12 @@
                 <input type="time" class="input">
             </div>
         </div>
+        <div class="field">
+            <label for="repeat">Does repeat</label><br>
+            <input type="checkbox" id="repeat" value="On repeat">
+        </div>
+    
+
     </div>
 </body>
 </html>
