--- a/popup/popup.html
+++ b/popup/popup.html
@@ -32,6 +32,12 @@
             </div>
         </div>
         <div class="field">
+            <label class="label">Message</label>
+            <div class="control">
+                <input type="text" class="input" id="Message">
+            </div>
+        </div>
+        <div class="field">
             <label for="repeat">Does repeat</label><br>
             <input type="checkbox" id="repeat" value="On repeat">
         </div>
