--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,7 +22,7 @@
     <div class="container m-3">
         <div class="field">
             <label class="phone">Enter your phone number:</label>
-            <input type="tel" id="phoneID" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+            <input type="tel" id="phoneID" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="+972 512345678">
         </div>
 
         <div class="field">
