--- a/popup/popup.html
+++ b/popup/popup.html
@@ -52,7 +52,7 @@
             <br>
             <div class="field">
                 <label class="phone">Enter phone number:</label>
-                <input type="tel" id="phoneID" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="+972 512345678">
+                <input type="tel" id="phoneID" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="512345678">
             </div>
             <div class="social">
                 <img src="../image/whatsapp_icon.png" alt="Whatsapp" style="width: 20px; height: 20px;">
