--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container m-3">
-        <h1 class="title">Open all 4 socials</h1>
+        <h1 class="title">Open all 5 socials</h1>
 
-        <div class="field">
+        <!-- <div class="field">
             <label class="label">Status</label>
             <span class="tag is-success"> Sent</span>
             <span class="tag is-warning"> Waiting</span>
-        </div>
+        </div> -->
     </div>
     <div class="container m-2">
         <div class="field">
@@ -47,6 +47,11 @@
                 <img src="../image/twitter_icon.png" alt="Twitter" style="width: 20px; height: 20px;">
                 <label for="twitter">Twitter</label>
                 <input type="checkbox" id="twitter" value="twitter">
+            </div>
+            <div class="social">
+                <img src="../image/google.png" alt="Google" style="width: 20px; height: 20px;">
+                <label for="google">Google</label>
+                <input type="checkbox" id="google" value="google">
             </div>
             
             <br>
